--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pars Coder || Portfolio website</title>
+    <meta name="viewport" content="passionate about crafting intuitive 
+    and visually stunning digital experiences. From wireframes to interactive prototypes, I'll ensure your users are delighted. 
+    Let's collaborate and bring your ideas to life">
+    <title>Promise Micheal || Portfolio website</title>
     <link rel="stylesheet" href="style.css">
     <!-- boxicon css link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -13,7 +15,7 @@
 <body>
     <div class="overlay"></div>
     <header>
-        <a href="#" class="logo"><span>R</span>ichi</a>
+        <a href="#" class="logo"><span>Ui</span>Vapour</a>
         <ul class="navlist">
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -541,7 +543,7 @@
     </section>
 
     <footer>
-        <p>Copyright © 2023 by <span>Pars Coder</span> || All Right Reservd.</p>
+        <p>Copyright © 2023 by <span>EmpireTech</span> || All Right Reservd.</p>
     </footer>
 
     <div id="progress">
